# openlayer-python

./: .gitignore  .pylintrc  .release-please-manifest.json  .stats.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  CURSOR_MEMORY.md  LICENSE  README.md  SECURITY.md  api.md  fixed_async_example.md  genindex.html  index.html  mypy.ini  objects.inv  openlayer_duplicate_traces_analysis.md  py-modindex.html  pyproject.toml  release-please-config.json  requirements-docs.txt  requirements.txt  search.html  searchindex.js  sentiment-unbox.ipynb  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  code_validations.yml  create-releases.yml  docs.yml  examples_gallery.yml  publish-pypi.yml  publish.yml  release-doctor.yml
_sources/: index.rst.txt
_sources/reference/: authentication.rst.txt  projects.rst.txt
_static/: documentation_options.js
bentowrapper/pytorch/: __init__.py
bentowrapper/sklearn/: __init__.py
bentowrapper/tensorflow/: __init__.py
bentowrapper/transformers/: __init__.py
docs/: requirements.txt
docs/_templates/: class.rst  sidebar-nav-bs.html
docs/source/: conf.py  index.rst
examples/: README.md
examples/banking/: demo-banking.ipynb
examples/documentation-tutorials/: nlp_tutorial.ipynb  tabular_tutorial.ipynb
examples/fasttext/: fasttext.ipynb
examples/monitoring/: export_inference_pipeline_data.py  export_with_utils.py  upload_batch_data.py  upload_reference_dataset.py
examples/null-values/: xepelin-model-official.ipynb
examples/pytorch/: pytorch.ipynb
examples/rest-api/: create_llm_project_with_tests.py  create_project.py  development_test_results.py  monitoring_test_results.py  stream_data.py
examples/sentiment-analysis/: requirements.txt  sentiment-sklearn.ipynb  sentiment-unbox.ipynb  server-tests.ipynb
examples/sklearn/: sklearn.ipynb
examples/tensorflow/: imdb_text.ipynb
examples/tracing/: guardrails_example.py  helper_functions_guardrails.py  improved_guardrails_test.py  offline_buffering.ipynb  programmatic_configuration.py  promote_trace_columns.py  simple_guardrails_test.py  simple_helper_functions_test.py  trace_decorator_with_guardrails.py  trace_metadata_updates.py  trace_openai_with_guardrails.py
examples/transformers/: requirements.txt  transformers.ipynb
examples/upload-model-ume/: 1.0-ume-upload-model.ipynb  data_processor.pkl  model.h5  setup.sh  training_metadata.pkl
openlayer/: __init__.py  api.py  baseline.py  constants.py  datasets.py  decorator.py  exceptions.py  inference_pipelines.py  llm_monitors.py  models.py  prediction_job.py  project_versions.py  projects.py  schemas.py  tasks.py  utils.py  validators.py  version.py
openlayer/integrations/: langchain_callback.py
openlayer/model_runners/: base_model.py  base_model_runner.py  environment.py  ll_model_runners.py  traditional_ml_model_runners.py
openlayer/prediction_jobs/: regression_prediction_job.py
openlayer/schemas/: dataset_schemas.py  inference_pipeline_schemas.py  model_schemas.py  (+1 more)
reference/: authentication.html  development.html  index.html  monitoring.html  projects.html
scripts/: lint
tests/: conftest.py  requirements.txt  test_async_openai_embedding_integration.py  test_bedrock_integration.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_google_adk_integration.py  test_integration_conditional_imports.py  test_litellm_integration.py  test_models.py  test_offline_buffering.py  test_openai_embedding_helpers.py  test_openai_embedding_integration.py  test_openai_parse_tracing.py  test_openlayer.py  test_portkey_integration.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_tracer_configuration.py  test_tracing_core.py  test_transform.py  utils.py
unbox/: __init__.py
unboxapi/: __init__.py  api.py  datasets.py  exceptions.py  model_baseline.py  model_strings.py  models.py  projects.py  schemas.py  tasks.py  template.py  utils.py  version.py
(+422 files in other folders)
