[isort]
profile=black

[flake8]
count = True
max-line-length = 192

[tool:pytest]
testpaths = 
    tests

[metadata]
name = openlayer
version = attr: openlayer.version.__version__
description = The official Python API library for Openlayer: the Testing and Debugging Platform for AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openlayer-ai/openlayer-python
author = Unbox Inc.
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
keywords = MLOps, AI, Openlayer
project_urls =
    Documentation = https://docs.openlayer.com/
    Openlayer User Slack Group = https://l.linklyhq.com/l/1DG73

[options]
packages = 
    openlayer
    openlayer.validators
    openlayer.prediction_jobs
install_requires =
    cohere
    jupyter
    marshmallow
    marshmallow_oneofschema
    openai
    pandas
    pybars3
    requests
    requests_toolbelt
    requests>=2.28.2
    tabulate
    tqdm
    urllib3>=1.26.14
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools>=59.0
    wheel
zip_safe = False
